# happyeyeballs

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/happyeyeballs/: __init__.py  __main__.py
tests/: test_init.py
