[project]
name = "happyeyeballs"
version = "0.1.0"
description = "Basic implementation of happy eyeballs with non blocking sockets"
readme = "README.md"
authors = [
    { name = "Joakim Plate", email = "elupus@ecce.se" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
